# parquet-streamer

./: .gitignore  README.md
python-grpc/: README.md  Reader.py  StreamingClient.py  StreamingServer.py  pyproject.toml  stream.proto
python-grpc/lib/: LowLevel.py
